[gd_scene load_steps=154 format=2]

[ext_resource path="res://LizardGame/Sprites/Tree/TreeWind96.png" type="Texture" id=1]
[ext_resource path="res://LizardGame/World/Tree/Tree.gd" type="Script" id=2]
[ext_resource path="res://LizardGame/Sprites/Tree/TrunkHit32.png" type="Texture" id=3]
[ext_resource path="res://LizardGame/Sounds/Tree/WoodHit.wav" type="AudioStream" id=4]
[ext_resource path="res://LizardGame/Sprites/Tree/TreeShadowWind96.png" type="Texture" id=5]
[ext_resource path="res://LizardGame/World/Apple/Apple.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 288, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 384, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 480, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 576, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 672, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 96, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 288, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 384, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 480, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 576, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 672, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 96, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 192, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 288, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 384, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 480, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 576, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 672, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 96, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 192, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 288, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 384, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 480, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 576, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 672, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 96, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 192, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 288, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 384, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 480, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 576, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 672, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 0, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 96, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 192, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 288, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 384, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 480, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 576, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 672, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 0, 672, 96, 96 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 96, 672, 96, 96 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 192, 672, 96, 96 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 288, 672, 96, 96 )

[sub_resource type="SpriteFrames" id=61]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "WIND",
"speed": 60.0
} ]

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 5 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 5 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 5 )
region = Rect2( 96, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 5 )
region = Rect2( 192, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 5 )
region = Rect2( 288, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 5 )
region = Rect2( 384, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 5 )
region = Rect2( 480, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 5 )
region = Rect2( 576, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 5 )
region = Rect2( 672, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 5 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 5 )
region = Rect2( 96, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 5 )
region = Rect2( 192, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 5 )
region = Rect2( 288, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 5 )
region = Rect2( 384, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 5 )
region = Rect2( 480, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 5 )
region = Rect2( 576, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 5 )
region = Rect2( 672, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 5 )
region = Rect2( 0, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 5 )
region = Rect2( 96, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 5 )
region = Rect2( 192, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 5 )
region = Rect2( 288, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 5 )
region = Rect2( 384, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 5 )
region = Rect2( 480, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 5 )
region = Rect2( 576, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 5 )
region = Rect2( 672, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 5 )
region = Rect2( 0, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 5 )
region = Rect2( 96, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 5 )
region = Rect2( 192, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 5 )
region = Rect2( 288, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 5 )
region = Rect2( 384, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 5 )
region = Rect2( 480, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 5 )
region = Rect2( 576, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 5 )
region = Rect2( 672, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 5 )
region = Rect2( 0, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 5 )
region = Rect2( 96, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 5 )
region = Rect2( 192, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 5 )
region = Rect2( 288, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 5 )
region = Rect2( 384, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 5 )
region = Rect2( 480, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 5 )
region = Rect2( 576, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 5 )
region = Rect2( 672, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 5 )
region = Rect2( 0, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 5 )
region = Rect2( 96, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 5 )
region = Rect2( 192, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 5 )
region = Rect2( 288, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 5 )
region = Rect2( 384, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 5 )
region = Rect2( 480, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 5 )
region = Rect2( 576, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 5 )
region = Rect2( 672, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 5 )
region = Rect2( 0, 672, 96, 96 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 5 )
region = Rect2( 96, 672, 96, 96 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 5 )
region = Rect2( 192, 672, 96, 96 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 5 )
region = Rect2( 288, 672, 96, 96 )

[sub_resource type="SpriteFrames" id=147]
animations = [ {
"frames": [ SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ) ],
"loop": true,
"name": "WIND",
"speed": 60.0
} ]

[sub_resource type="Curve" id=62]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=63]
curve = SubResource( 62 )

[sub_resource type="ParticlesMaterial" id=64]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 34.0
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 63 )
color = Color( 0, 0.396078, 0.329412, 1 )

[sub_resource type="ParticlesMaterial" id=65]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 34.0
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 63 )
color = Color( 0.117647, 0.25098, 0.266667, 1 )

[sub_resource type="CircleShape2D" id=66]
radius = 41.0

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 3 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 3 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 3 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 3 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=68]
animations = [ {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ) ],
"loop": true,
"name": "HIT",
"speed": 60.0
}, {
"frames": [ SubResource( 67 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=85]
radius = 12.0

[sub_resource type="CircleShape2D" id=86]
radius = 12.0

[node name="Tree" type="AnimatedSprite"]
z_index = 50
z_as_relative = false
frames = SubResource( 61 )
animation = "WIND"
frame = 43
playing = true
script = ExtResource( 2 )
mApple = ExtResource( 6 )

[node name="Shadow" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( -20, 20 )
z_index = 30
z_as_relative = false
frames = SubResource( 147 )
animation = "WIND"
frame = 33
playing = true

[node name="LeavesLightParticles" type="Particles2D" parent="."]
amount = 20
lifetime = 3.0
process_material = SubResource( 64 )

[node name="LeavesDarkParticles" type="Particles2D" parent="."]
amount = 20
lifetime = 3.0
process_material = SubResource( 65 )

[node name="TreeViewZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 78

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeViewZone"]
shape = SubResource( 66 )

[node name="Trunk" type="StaticBody2D" parent="."]
show_behind_parent = true
collision_mask = 0

[node name="TrunkSprite" type="AnimatedSprite" parent="Trunk"]
z_index = 40
z_as_relative = false
frames = SubResource( 68 )
animation = "IDLE"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trunk"]
position = Vector2( 1, 1 )
shape = SubResource( 85 )

[node name="TrunkHurtBox" type="Area2D" parent="Trunk"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trunk/TrunkHurtBox"]
position = Vector2( 1, 1 )
shape = SubResource( 86 )

[node name="TunkHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0
bus = "Sounds"

[node name="PivotPoint" type="Position2D" parent="."]
visible = false

[node name="AppleSpawnPoint" type="Position2D" parent="PivotPoint"]
position = Vector2( 25, 0 )

[node name="ReloadTimer" type="Timer" parent="."]

[connection signal="body_entered" from="TreeViewZone" to="." method="_on_TreeViewZone_body_entered"]
[connection signal="body_exited" from="TreeViewZone" to="." method="_on_TreeViewZone_body_exited"]
[connection signal="animation_finished" from="Trunk/TrunkSprite" to="." method="_on_TrunkSprite_animation_finished"]
[connection signal="area_entered" from="Trunk/TrunkHurtBox" to="." method="_on_TrunkHurtBox_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
